--- a/multi-tictactoe-client/package.json
+++ b/multi-tictactoe-client/package.json
@@ -18,6 +18,7 @@
     "socket.io-client": "^3.0.4",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
+    "unique-string": "^2.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
