--- a/multi-tictactoe/package.json
+++ b/multi-tictactoe/package.json
@@ -9,7 +9,8 @@
     "socket.io": "^3.0.4"
   },
   "scripts": {
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "debug": "node inspect server.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
